# OTUS_-plusplus_profi

.github/workflows/: blank.yml  doxygen.yml  release.yml
home1/: CMakeLists.txt  lib.cpp  lib.h  main.cpp  test_version.cpp
home2/: CMakeLists.txt  ip_filter.cpp
home3/: CMakeLists.txt  allocator.h  container.h  main.cpp
home4_sfinae/: CMakeLists.txt  main.cpp  print_ip.h  tests.cpp  tuple_traits.h
home6/: CMakeLists.txt
home6/src/: main.cpp  matrix.h  print.h  tests.cpp
home_7/: CMakeLists.txt  bulk.hpp  main.cpp  test.cpp
